--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ body{
 .title_name h1{
     font-size: bold;
 }
-.donate_today{
+.donate{
     text-align: center;
     margin-top: 100px;
 }
 
 
-.edit-all{
+.all_amount{
     display: flex;
     justify-content: space-evenly;
     border: 0px solid red;
@@ -56,7 +56,7 @@ body{
     
    
 }
-.edit-para{
+.amount{
     margin-top: 10px;
     font-size: 20px;
     
@@ -178,12 +178,12 @@ button{
     text-align: center;
     justify-content: center;
 }
-#fot_p{
+#copy_right{
   
    
     color: white;
 }
-#net{
+#title_name{
      margin: 60px 0px 0px 0px;
     color: tomato;
 }
